[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/StyleBox/ChromeRimmed.tres" type="StyleBox" id=1]
[ext_resource path="res://src/UI/ShopMenu/ShopMenuItem.gd" type="Script" id=2]
[ext_resource path="res://assets/Item/Items.png" type="Texture" id=4]
[ext_resource path="res://src/Item/Linen.tres" type="Resource" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 16 )

[node name="ShopMenuItem" type="MarginContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
item = ExtResource( 5 )
sprite = NodePath("Sprite")
shadow = NodePath("Sprite/Shadow")

[node name="Panel" type="Panel" parent="."]
margin_right = 48.0
margin_bottom = 48.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, 24 )
scale = Vector2( 2, 2 )
texture = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="Sprite"]
modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 1, 1 )
texture = SubResource( 1 )

[connection signal="focus_entered" from="." to="." method="_on_ShopMenuItem_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ShopMenuItem_focus_exited"]
[connection signal="resized" from="." to="." method="_on_ShopMenuItem_resized"]
